--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -20,3 +20,9 @@ button {
 button:hover {
     box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
+
+// remove router link style
+a {
+    text-decoration: none;
+    color: inherit;
+}
